--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+GAME_4100_KEY="QY-16-WAN-0668-2555555-7ROAD-dandantang-love777nguyenluu"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
